GNOME Bugzilla – Bug 619035
Amiga Modules (XM/MOD/IT/S3M) do not play in stereo
Last modified: 2012-10-06 11:56:13 UTC
Every Amiga module is played with an underrated volume, and in mono. That plugin is just sabotage.
We're using libmodplug. Could you please discuss the issue there?
Closing this bug report as no further information has been provided. Please feel free to reopen this bug if you can provide the information asked for. Thanks!
Created attachment 201991 [details] [review] finally files are played as stereo(instead of mono) AND 44100 Hz I am not programmer, not sure if its correct, but worksforme(for stereo files). Even if its not correct, original conditions seems illogical and not making any sense(I dont know gstreamer, but why 'return' when SUCCESS (maybe origin attemp was to return ERRORCODE, but becasuse VOID functions cannot do that, he decided to...)
Created attachment 201999 [details] [review] finally files are played as stereo(instead of mono)
commit 4286414e002016e6f3837696b0dec708d59787dc Author: Krzysztof Krakowiak <krzysztof.krakowiak@gmail.com> Date: Wed Nov 23 13:47:11 2011 +0100 modplug: fix modules playing as mono instead of stereo replaced broken if-return logic for fixating rate and number of channels that caused that modules were always (after successful fixation of rate) played as mono (instead of stereo) by correct one with appropiate warnings. https://bugzilla.gnome.org/show_bug.cgi?id=619035
You (IIRC) mentioned on IRC that you were seeing something else that needed fixing, can you shed some light on this, or can this be closed as fixed ?
And by "you", I mean Krzysztof :)
Krzysztof, ping, can you please provide requested information as per comment#6 ?
(In reply to comment #6) > You (IIRC) mentioned on IRC that you were seeing something else that needed > fixing, can you shed some light on this, or can this be closed as fixed ? Hi, Sorry for not replying so long. This bug is fixed when converting to MP3, but there is other general bug in gstreamer that causes files to be mono when converting to Ogg Vorbis from some audio formats -- cut here -- <v^> It might be that Vorbis chooses 1 channel in preference. See https://bugzilla.gnome.org/show_bug.cgi?id=590361 ... <evil_core> v^: "Elements should not use <evil_core> gst_structure_fixate_field_nearest_int()" <evil_core> elements are decoder, like what I was playing and those fixation's functions should be removed totally? <v^> evil_core: it is needed if vorbisenc and decodebin have no common format. As for _fixate, I did not know it should not be used by elements. Maybe look at the plugin history to see if it replaced some other code. <evil_core> v^: vorbisenc doesnt have "channels" parameter :/ <v^> I does. It's wrong though, IIRC it's 255 max, and it says 256. <v^> Oh, it's in caps, not as a property, in case you meant this. -- cut here -- You can test it using mine shell script: http://carme.pld-linux.org/~evil/varia/pgmc Or run directly: /usr/bin/gst-launch-0.10 filesrc location=01-Intro.it ! decodebin ! audioconvert ! audioresample ! vorbisenc name=enc quality=.3 ! oggmux ! filesink location=./01-Intro.ogg
The vorbisenc channels part is fixed. channels: [ 1, 255 ]
Using decodebin2 makes it work for me: gst-launch-0.10 filesrc location=spacedeb.mod ! decodebin2 ! audioconvert ! audioresample ! vorbisenc name=enc quality=.3 ! oggmux ! filesink location=spacedeb.ogg